--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "vue": "^2.6.11",
+    "vue": "^2.6.10",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.1",
     "vue-router": "^3.1.6",
@@ -41,7 +41,7 @@
     "sass-loader": "^8.0.2",
     "typescript": "~3.8.3",
     "vue-cli-plugin-vuetify": "~2.0.5",
-    "vue-template-compiler": "^2.6.11",
+    "vue-template-compiler": "2.6.10",
     "vuetify-loader": "^1.3.0",
     "webpack": "^4.43.0"
   }
